Fixed load more button overflowing on small screens

--- a/src/app/components/load-more-button/_index.scss
+++ b/src/app/components/load-more-button/_index.scss
@@ -6,7 +6,6 @@
 
 .load-more-button {
   display: block;
-  width: 100%;
   margin: 0 10px;
   padding: 10px 0 30px 0;
   text-align: center;
